# fbi-proxy

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  Caddyfile  Caddyfile.head  Cargo.toml  Dockerfile  INSTALL.md  PINGORA_PROXY.md  README.md  RUST_PROXY.md  TODO.md  build-proxy.bat  build-proxy.sh  cli.js  cli.ts  docker-compose.yml  fbi-proxy.rs  index.mjs  package-lock.json  package.json  proxy.rs  routes.yaml  services.demo.yml  tsconfig.json  vitest.config.ts
.github/workflows/: docs.yml  release.yml  test.yml
caddy/: .gitignore  hosts.demo.Caddyfile  sites.demo.Caddyfile
dev/: build-windows.bat
docs/: Gemfile  README.md  _config.yml  api.md  auth.md  cross-compile-tradeoffs.html  development.md  docker.md  index.md  installation.md  routing.md  troubleshooting.md  usage.md
e2e/: README.md  auth.test.ts  custom-routes.test.ts  domain-filtering.test.ts  hmr-proxy.test.ts  https-upstream.test.ts  implementation-comparison.test.ts  metrics.test.ts  proxy-core.test.ts  routes-hot-reload.test.ts  types.d.ts  vscode-web.test.ts  websocket.test.ts
e2e/fixtures/vite-app/: index.html  package.json  vite.config.ts
e2e/fixtures/vite-app/src/: counter.ts  main.ts
e2e/helpers/: proxy-client.ts  test-server.ts
e2e/setup/: global-setup.ts  global-teardown.ts
lab/web-code/: .gitignore  README.md  daemon.ts  fbi-proxy.yaml  index.html  package.json  provision-client.ts  provision.ts  setup-repo.sh  shell.ts  start.ts  status-worker.ts  terminal.html  terminal.tsx  vite.config.ts
lab/web-code/no-env/: README.md
lib/fbi-auth/docs/: healthz.md  setup.md  snolab.md
lib/fbi-auth/src/: allowlist.ts  audit.ts  config.ts  server.ts  session.ts  snolabDefaults.ts  state.ts
lib/fbi-auth/src/providers/: firebase.ts  google.ts  local.ts
lib/fbi-auth/src/routes/: callback.ts  firebase.ts  firebaseLogin.ts  health.ts  localLogin.ts  login.ts  logout.ts  me.ts  verify.ts
lib/fbi-auth/test/: auth.test.ts  local.test.ts
rs/: Cargo.toml  fbi-proxy.rs  lib.rs  metrics.rs  proxy.rs  routes.rs  tls.rs
rs/.cargo/: config.toml
scripts/: build-or-download.cjs  build-or-download.js  clean-proxy.cjs  clean-proxy.js  download-proxy.cjs  download-proxy.js
src/: cli.ts
ts/: adminClient.ts  buildFbiProxy.ts  cli.ts  dRun.ts  dSpawn.ts  download-fbiproxy.ts  downloadCaddy.ts  getProxyFilename.ts  install-port-forward.ts  routes.test.ts  routes.ts  rulesCli.ts  setup.ts
ts/auth/: authConfig.ts  caddyfileGen.test.ts  caddyfileGen.ts  downloadCaddy.test.ts  downloadCaddy.ts  setupWizard.ts  spawnCaddy.ts  spawnFbiAuth.ts
