[package]
name = "fbi-proxy"
version = "0.1.1"
edition = "2024"
description = "A fast and flexible proxy server for intercepting and modifying HTTP/HTTPS requests"
license = "MIT"
repository = "https://github.com/snomiao/fbi-proxy"
homepage = "https://github.com/snomiao/fbi-proxy"
documentation = "https://github.com/snomiao/fbi-proxy"
keywords = ["proxy", "http", "https", "intercept", "network"]
categories = ["network-programming", "web-programming"]

[[bin]]
name = "fbi-proxy"
path = "./rs/fbi-proxy.rs"

[dependencies]
# Using simpler dependencies that build reliably on Windows
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
regex = "1.0"
env_logger = "0.10"
log = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
