[package]
name = "fbi-proxy"
version = "0.1.1"
edition = "2024"
description = "A fast and flexible proxy server for intercepting and modifying HTTP/HTTPS requests"
license = "MIT"
repository = "https://github.com/snomiao/fbi-proxy"
homepage = "https://github.com/snomiao/fbi-proxy"
documentation = "https://github.com/snomiao/fbi-proxy"
keywords = ["proxy", "http", "https", "intercept", "network"]
categories = ["network-programming", "web-programming"]

[[bin]]
name = "fbi-proxy"
path = "./rs/fbi-proxy.rs"

[dependencies]
# Using simpler dependencies that build reliably on Windows
hyper = { version = "1.7", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "server", "tokio", "http1"] }
http-body-util = "0.1"
hyper-tungstenite = "0.18"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
regex = "1.11"
env_logger = "0.11"
log = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
tower = { version = "0.5", features = ["util"] }
